trying to fix word spacing issue on android

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -229,6 +229,7 @@ article.hero {
   }
   p {
     text-align: left;
+    white-space: normal;
     @media (max-width: $md-breakpoint) {
       //text-align: justify;
     }
